# caffe_tool

./: .gitignore
caffemodel_parser/: ._ResNet-50-model.caffemodel  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  protobuf_parser.cpp  read.me  run
caffemodel_parser/include/caffe/proto/: caffe.pb.h
